force-app/main/default/objects/ARF_THE_ONE__c/ARF_THE_ONE__c.object-meta.xml
<CustomObject>
    <description>One combined ARF that will show record type based on input choices</description>
    <label>ARF-THE ONE</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>ARF-THE ONE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARF-THE ONE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>