force-app/main/default/objects/ARF_THE_ONE__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ARF-THE ONEs</relationshipLabel>
    <relationshipName>ARF_THE_ONEs</relationshipName>
    <type>Lookup</type>
</CustomField>