force-app/main/default/objects/ARF_THE_ONE__c/fields/Back_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Back_Template_Code__c</fullName>
    <label>Back Template Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>