force-app/main/default/objects/ARF_THE_ONE__c/fields/Back_Template_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Back_Template_Group_Name__c</fullName>
    <label>Back Template Group Name</label>
    <type>TextArea</type>
</CustomField>