force-app/main/default/objects/ARF_THE_ONE__c/fields/Back_Template_Headline__c.field-meta.xml
<CustomField>
    <fullName>Back_Template_Headline__c</fullName>
    <label>Back Template Headline</label>
    <type>TextArea</type>
</CustomField>