force-app/main/default/objects/ARF_THE_ONE__c/fields/Back_Template_Verse_Reference__c.field-meta.xml
<CustomField>
    <fullName>Back_Template_Verse_Reference__c</fullName>
    <label>Back Template Verse Reference</label>
    <type>TextArea</type>
</CustomField>