force-app/main/default/objects/ARF_THE_ONE__c/fields/Check_If_PMS_match__c.field-meta.xml
<CustomField>
    <fullName>Check_If_PMS_match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check If PMS match</label>
    <type>Checkbox</type>
</CustomField>