force-app/main/default/objects/ARF_THE_ONE__c/fields/Deco_Type__c.field-meta.xml
<CustomField>
    <fullName>Deco_Type__c</fullName>
    <label>Deco Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9001</fullName>
            </value>
            <value>
                <fullName>Screen Print</fullName>
            </value>
            <value>
                <fullName>Heat Press</fullName>
            </value>
            <value>
                <fullName>Embroidery</fullName>
            </value>
            <value>
                <fullName>Sticker Only</fullName>
            </value>
            <value>
                <fullName>ASI/Promo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>