force-app/main/default/objects/ARF_THE_ONE__c/fields/Ink_Colors_on_Back__c.field-meta.xml
<CustomField>
    <fullName>Ink_Colors_on_Back__c</fullName>
    <label>Ink Colors on Back</label>
    <type>TextArea</type>
</CustomField>