force-app/main/default/objects/ARF_THE_ONE__c/fields/Ink_Colors_on_Left_Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Ink_Colors_on_Left_Sleeve__c</fullName>
    <label>Ink Colors on Left Sleeve</label>
    <type>TextArea</type>
</CustomField>