force-app/main/default/objects/ARF_THE_ONE__c/fields/Ink_Colors_on_Other__c.field-meta.xml
<CustomField>
    <fullName>Ink_Colors_on_Other__c</fullName>
    <label>Ink Colors on Other</label>
    <type>TextArea</type>
</CustomField>