force-app/main/default/objects/ARF_THE_ONE__c/fields/Ink_Colors_on_Promo_EMB__c.field-meta.xml
<CustomField>
    <fullName>Ink_Colors_on_Promo_EMB__c</fullName>
    <label>Ink Colors on Promo/EMB</label>
    <type>TextArea</type>
</CustomField>