force-app/main/default/objects/ARF_THE_ONE__c/fields/Inventory_SKU_Colors__c.field-meta.xml
<CustomField>
    <fullName>Inventory_SKU_Colors__c</fullName>
    <label>Inventory SKU/Colors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>