force-app/main/default/objects/ARF_THE_ONE__c/fields/Is_Client_Ordering_More_than_One_Color__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Ordering_More_than_One_Color__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Client Ordering More than One Color?</label>
    <type>Checkbox</type>
</CustomField>