force-app/main/default/objects/ARF_THE_ONE__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Order</label>
    <referenceTo>portal_my_order__c</referenceTo>
    <relationshipLabel>ARF-THE ONE</relationshipLabel>
    <relationshipName>ARF_THE_ONE</relationshipName>
    <type>Lookup</type>
</CustomField>