force-app/main/default/objects/ARF_THE_ONE__c/fields/Number_of_Inks_on_Other__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inks_on_Other__c</fullName>
    <label>Number of Inks on Other?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>