force-app/main/default/objects/ARF_THE_ONE__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARF-THE ONEs</relationshipLabel>
    <relationshipName>ARF_THE_ONEs</relationshipName>
    <type>Lookup</type>
</CustomField>