force-app/main/default/objects/ARF_THE_ONE__c/fields/PA_Consult_Notes__c.field-meta.xml
<CustomField>
    <fullName>PA_Consult_Notes__c</fullName>
    <label>PA Consult Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>