force-app/main/default/objects/ARF_THE_ONE__c/fields/Print_Locations__c.field-meta.xml
<CustomField>
    <fullName>Print_Locations__c</fullName>
    <label>Print Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Front</fullName>
            </value>
            <value>
                <fullName>Left Crest</fullName>
            </value>
            <value>
                <fullName>Full Back</fullName>
            </value>
            <value>
                <fullName>Locker Tag</fullName>
            </value>
            <value>
                <fullName>Left Sleeve</fullName>
            </value>
            <value>
                <fullName>Right Sleeve</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>