force-app/main/default/objects/ARF_THE_ONE__c/fields/Product_Color__c.field-meta.xml
<CustomField>
    <fullName>Product_Color__c</fullName>
    <label>FD/Promo Product Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>