force-app/main/default/objects/ARF_THE_ONE__c/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <label>FD/Promo Product Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>