force-app/main/default/objects/ARF_THE_ONE__c/fields/Promo_Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Promo_Product_Summary__c</fullName>
    <label>Promo Product Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>