force-app/main/default/objects/ARF_THE_ONE__c/fields/Smallest_Size_Being_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Smallest_Size_Being_Ordered__c</fullName>
    <label>Smallest Size Being Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth X-Small</fullName>
            </value>
            <value>
                <fullName>Youth Small</fullName>
            </value>
            <value>
                <fullName>Youth Medium</fullName>
            </value>
            <value>
                <fullName>Youth Large</fullName>
            </value>
            <value>
                <fullName>Youth X-Large</fullName>
            </value>
            <value>
                <fullName>Adult X-Small</fullName>
            </value>
            <value>
                <fullName>Adult Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>