force-app/main/default/objects/ARF_THE_ONE__c/fields/Sticker_1__c.field-meta.xml
<CustomField>
    <fullName>Sticker_1__c</fullName>
    <label>Sticker 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>