force-app/main/default/objects/ARF_THE_ONE__c/fields/Sticker_2__c.field-meta.xml
<CustomField>
    <fullName>Sticker_2__c</fullName>
    <label>Sticker 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>