force-app/main/default/objects/ARF_THE_ONE__c/fields/Sticker_3__c.field-meta.xml
<CustomField>
    <fullName>Sticker_3__c</fullName>
    <label>Sticker 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>