force-app/main/default/objects/ARF_THE_ONE__c/fields/Sticker_Topper__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Topper__c</fullName>
    <label>Sticker Topper</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>