force-app/main/default/objects/ARF_THE_ONE__c/fields/Summary_of_Front_Location__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Front_Location__c</fullName>
    <label>Summary of Front Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>