force-app/main/default/objects/ARF_THE_ONE__c/fields/Summary_of_Left_Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Left_Sleeve__c</fullName>
    <label>Summary of Left Sleeve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>