force-app/main/default/objects/ARF_THE_ONE__c/fields/Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Code__c</fullName>
    <label>Front Template Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>