force-app/main/default/objects/ARF_THE_ONE__c/fields/Template_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Group_Name__c</fullName>
    <label>Front Template Group Name</label>
    <type>TextArea</type>
</CustomField>