force-app/main/default/objects/ARF_THE_ONE__c/fields/Template_Headline__c.field-meta.xml
<CustomField>
    <fullName>Template_Headline__c</fullName>
    <label>Front Template Headline</label>
    <type>TextArea</type>
</CustomField>