force-app/main/default/objects/ARF_THE_ONE__c/fields/Template_Verse_Reference__c.field-meta.xml
<CustomField>
    <fullName>Template_Verse_Reference__c</fullName>
    <label>Front Template Verse Reference</label>
    <type>TextArea</type>
</CustomField>