force-app/main/default/objects/ARF_THE_ONE__c/fields/What_Kind_of_Art__c.field-meta.xml
<CustomField>
    <fullName>What_Kind_of_Art__c</fullName>
    <label>What Kind of Art?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>