force-app/main/default/objects/ARF_THE_ONE__c/recordTypes/ASI_Promo_Emb_Heat_Press.recordType-meta.xml
<RecordType>
    <fullName>ASI_Promo_Emb_Heat_Press</fullName>
    <active>true</active>
    <label>ASI/Promo/Emb/Heat Press</label>
</RecordType>