force-app/main/default/objects/ARF_THE_ONE__c/recordTypes/CSA_Screen_Print.recordType-meta.xml
<RecordType>
    <fullName>CSA_Screen_Print</fullName>
    <active>true</active>
    <label>CSA-Screen Print</label>
</RecordType>