force-app/main/default/objects/ARF_THE_ONE__c/recordTypes/Hourly_Screenprint.recordType-meta.xml
<RecordType>
    <fullName>Hourly_Screenprint</fullName>
    <active>true</active>
    <label>Hourly-Screenprint</label>
</RecordType>