force-app/main/default/objects/ARF_THE_ONE__c/recordTypes/Stickers.recordType-meta.xml
<RecordType>
    <fullName>Stickers</fullName>
    <active>true</active>
    <label>Stickers</label>
</RecordType>