force-app/main/default/objects/ARF_THE_ONE__c/recordTypes/Template_Screen_Print.recordType-meta.xml
<RecordType>
    <fullName>Template_Screen_Print</fullName>
    <active>true</active>
    <label>Template-Screen Print</label>
</RecordType>